--- a/index.html.html
+++ b/index.html.html
@@ -3,203 +3,108 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Al Noor Public School Manglour</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+  <title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", sans-serif;
-      background: #f7fff8;
-      color: #222;
-    }
-
-    /* NAVBAR */
-    header {
-      background: #0a8a3a;
-      padding: 15px 25px;
-      color: #fff;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
-    }
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: auto;
-    }
-    nav .logo {
-      font-size: 24px;
-      font-weight: 700;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* HERO SECTION */
-    .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)),
-      url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1400&q=60');
-      background-size: cover;
-      background-position: center;
-      height: 80vh;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-      animation: fadeIn 2s ease;
-    }
-    .hero h1 {
-      font-size: 48px;
-      font-weight: 700;
-    }
-    .hero p {
-      font-size: 20px;
-      margin: 15px 0;
-    }
-    .btn {
-      background: #0a8a3a;
-      padding: 12px 28px;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 18px;
-      display: inline-block;
-      margin-top: 10px;
-    }
-    .btn:hover {
-      background: #066b2c;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
-    }
-
-    /* CARDS */
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-      transition: 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-4px);
-    }
-    .card h2 {
-      margin-top: 0;
-    }
-
-    /* FEATURES */
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .feature-box {
-      background: #eaffea;
-      padding: 25px;
-      text-align: center;
-      border-radius: 10px;
-      border: 1px solid #c8f5d4;
-    }
-
-    /* FOOTER */
-    footer {
-      background: #0a8a3a;
-      padding: 20px;
-      color: white;
-      text-align: center;
-      margin-top: 40px;
-    }
+    body{margin:0;font-family:'Poppins',sans-serif;background:#f4f6f8;color:#333}
+    header{background:#0d6efd;color:#fff;padding:25px 10px;text-align:center}
+    nav{background:#083d8c;display:flex;justify-content:center;flex-wrap:wrap}
+    nav a{color:#fff;text-decoration:none;padding:12px 18px;display:block}
+    nav a:hover{background:#062f6b}
+    section{padding:40px 20px}
+    .container{max-width:1100px;margin:auto}
+    h2{color:#0d6efd}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px}
+    .card{background:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px rgba(0,0,0,0.08)}
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px}
+    .gallery img{width:100%;border-radius:8px}
+    form input,form textarea{width:100%;padding:10px;margin:8px 0;border:1px solid #ccc;border-radius:5px}
+    form button{background:#0d6efd;color:#fff;border:none;padding:12px 20px;border-radius:6px;cursor:pointer}
+    footer{background:#222;color:#fff;text-align:center;padding:15px}
   </style>
 </head>
-
 <body>
 
-  <!-- NAVBAR -->
-  <header>
-    <nav>
-      <div class="logo">Al Noor Public School</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="admissions.html">Admissions</a>
-        <a href="staff.html">Staff</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="notices.html">Notices</a>
-        <a href="contact.html">Contact</a>
-      </div>
-    </nav>
-  </header>
+<header>
+  <h1>AL-NOOR PUBLIC SCHOOL MANGLOUR</h1>
+  <p>शिक्षा सबसे शक्तिशाली हथियार है | Education is the most powerful weapon</p>
+</header>
 
-  <!-- HERO -->
-  <section class="hero">
-    <div>
-      <h1>Welcome to Al Noor Public School Manglour</h1>
-      <p>Education is the most powerful weapon which you can use to change the world.</p>
-      <a class="btn" href="admissions.html">Apply for Admission</a>
-    </div>
-  </section>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#academics">Academics</a>
+  <a href="#gallery">Gallery</a>
+  <a href="#admission">Admission</a>
+  <a href="#notice">Notice</a>
+  <a href="#staff">Staff</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <!-- CONTENT -->
-  <div class="container">
+<section id="home" class="container">
+  <h2>Welcome / स्वागत है</h2>
+  <p>We provide quality education with discipline, values and modern learning. | हम गुणवत्तापूर्ण शिक्षा प्रदान करते हैं।</p>
+</section>
 
-    <div class="card">
-      <h2>About Our School</h2>
-      <p>
-        Al Noor Public School Manglour provides quality education, strong moral values,
-        and a disciplined learning environment to help students build a bright future.
-      </p>
-    </div>
+<section id="about" class="container">
+  <h2>About Us / हमारे बारे में</h2>
+  <p>AL-NOOR PUBLIC SCHOOL MANGLOUR is dedicated to academic excellence and character building.</p>
+</section>
 
-    <div class="features">
-      <div class="feature-box">
-        <h3>📘 Quality Education</h3>
-        <p>Well-trained staff and modern teaching methods.</p>
-      </div>
-      <div class="feature-box">
-        <h3>🏫 Safe Environment</h3>
-        <p>Peaceful, supportive & secure for all students.</p>
-      </div>
-      <div class="feature-box">
-        <h3>🎓 Holistic Learning</h3>
-        <p>Focus on academics, discipline, sports & values.</p>
-      </div>
-    </div>
-
-    <div class="card">
-      <h2>Contact Information</h2>
-      <p><strong>Address:</strong> Malakpura Road, Manglour</p>
-      <p><strong>Phone:</strong> +91 70171 52544</p>
-      <p><strong>Email:</strong> alnoorpublicschool@gmail.com</p>
-    </div>
-
+<section id="academics" class="container">
+  <h2>Academics</h2>
+  <div class="cards">
+    <div class="card"><h3>Primary</h3><p>Strong foundation learning.</p></div>
+    <div class="card"><h3>Middle</h3><p>Concept-based education.</p></div>
+    <div class="card"><h3>High School</h3><p>Board & competitive preparation.</p></div>
   </div>
+</section>
 
-  <footer>
-    © 2025 Al Noor Public School Manglour — All Rights Reserved.
-  </footer>
+<section id="gallery" class="container">
+  <h2>Gallery</h2>
+  <div class="gallery">
+    <img src="https://via.placeholder.com/400x250" />
+    <img src="https://via.placeholder.com/400x250" />
+    <img src="https://via.placeholder.com/400x250" />
+    <img src="https://via.placeholder.com/400x250" />
+  </div>
+</section>
+
+<section id="admission" class="container">
+  <h2>Admission Form</h2>
+  <form>
+    <input type="text" placeholder="Student Name" required />
+    <input type="text" placeholder="Class" required />
+    <input type="tel" placeholder="Parent Mobile" required />
+    <textarea placeholder="Address"></textarea>
+    <button type="submit">Submit</button>
+  </form>
+</section>
+
+<section id="notice" class="container">
+  <h2>Notice Board</h2>
+  <ul>
+    <li>Admissions Open for 2025-26</li>
+    <li>School timing: 8:00 AM – 2:00 PM</li>
+    <li>Holiday notice will be updated here</li>
+  </ul>
+</section>
+
+<section id="staff" class="container">
+  <h2>Our Staff</h2>
+  <p>Qualified and experienced teachers dedicated to student success.</p>
+</section>
+
+<section id="contact" class="container">
+  <h2>Contact Us</h2>
+  <p><strong>Address:</strong> Mohalla Bahar Qila, Malakpura Road, Manglour</p>
+  <p><strong>Phone:</strong> +91-7017152544, +91-8439221040</p>
+  <p><strong>Email:</strong> Apschool@gmail.com</p>
+</section>
+
+<footer>
+  <p>© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
+</footer>
 
 </body>
 </html>
