--- a/index.html.html
+++ b/index.html.html
@@ -4,106 +4,196 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body{margin:0;font-family:'Poppins',sans-serif;background:#f4f6f8;color:#333}
-    header{background:#0d6efd;color:#fff;padding:25px 10px;text-align:center}
-    nav{background:#083d8c;display:flex;justify-content:center;flex-wrap:wrap}
-    nav a{color:#fff;text-decoration:none;padding:12px 18px;display:block}
-    nav a:hover{background:#062f6b}
-    section{padding:40px 20px}
-    .container{max-width:1100px;margin:auto}
-    h2{color:#0d6efd}
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px}
-    .card{background:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px rgba(0,0,0,0.08)}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px}
-    .gallery img{width:100%;border-radius:8px}
-    form input,form textarea{width:100%;padding:10px;margin:8px 0;border:1px solid #ccc;border-radius:5px}
-    form button{background:#0d6efd;color:#fff;border:none;padding:12px 20px;border-radius:6px;cursor:pointer}
-    footer{background:#222;color:#fff;text-align:center;padding:15px}
+    :root{
+      --green:#0a8a3a;
+      --green-dark:#066b2c;
+      --light:#f7fff8;
+    }
+
+    body{
+      margin:0;
+      font-family:'Poppins',sans-serif;
+      background:var(--light);
+      color:#222;
+    }
+
+    /* HEADER / NAVBAR */
+    header{
+      background:var(--green);
+      position:sticky;
+      top:0;
+      z-index:100;
+      box-shadow:0 3px 12px rgba(0,0,0,.15);
+    }
+    nav{
+      max-width:1200px;
+      margin:auto;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:14px 20px;
+      color:#fff;
+    }
+    .logo{
+      font-size:24px;
+      font-weight:700;
+      letter-spacing:.5px;
+    }
+    nav a{
+      color:#fff;
+      text-decoration:none;
+      margin-left:18px;
+      font-weight:500;
+    }
+    nav a:hover{ text-decoration:underline; }
+
+    /* HERO */
+    .hero{
+      height:80vh;
+      background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');
+      background-size:cover;
+      background-position:center;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      color:#fff;
+      padding:20px;
+      animation:fade 1.8s ease;
+    }
+    .hero h1{ font-size:46px; font-weight:700; }
+    .hero p{ font-size:19px; max-width:750px; margin:12px auto; }
+
+    .btn{
+      display:inline-block;
+      margin-top:12px;
+      padding:12px 30px;
+      background:var(--green);
+      color:#fff;
+      text-decoration:none;
+      border-radius:6px;
+      font-size:17px;
+    }
+    .btn:hover{ background:var(--green-dark); }
+
+    @keyframes fade{ from{opacity:0} to{opacity:1} }
+
+    /* SECTIONS */
+    .container{
+      max-width:1100px;
+      margin:auto;
+      padding:50px 20px;
+    }
+    .card{
+      background:#fff;
+      padding:28px;
+      border-radius:14px;
+      box-shadow:0 6px 20px rgba(0,0,0,.08);
+      margin-bottom:30px;
+    }
+
+    /* FEATURES */
+    .features{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:22px;
+      margin-top:35px;
+    }
+    .feature-box{
+      background:#eaffea;
+      padding:30px 20px;
+      border-radius:12px;
+      text-align:center;
+      border:1px solid #c8f5d4;
+      transition:.3s;
+    }
+    .feature-box:hover{ transform:translateY(-6px); }
+
+    /* FOOTER */
+    footer{
+      background:var(--green);
+      color:#fff;
+      text-align:center;
+      padding:22px 15px;
+      margin-top:40px;
+    }
+
+    @media(max-width:768px){
+      .hero h1{ font-size:34px; }
+      nav{ flex-direction:column; gap:8px; }
+    }
   </style>
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
-  <h1>AL-NOOR PUBLIC SCHOOL MANGLOUR</h1>
-  <p>शिक्षा सबसे शक्तिशाली हथियार है | Education is the most powerful weapon</p>
+  <nav>
+    <div class="logo">AL‑NOOR PUBLIC SCHOOL</div>
+    <div>
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#admission">Admission</a>
+      <a href="#staff">Staff</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
 </header>
 
-<nav>
-  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#academics">Academics</a>
-  <a href="#gallery">Gallery</a>
-  <a href="#admission">Admission</a>
-  <a href="#notice">Notice</a>
-  <a href="#staff">Staff</a>
-  <a href="#contact">Contact</a>
-</nav>
-
-<section id="home" class="container">
-  <h2>Welcome / स्वागत है</h2>
-  <p>We provide quality education with discipline, values and modern learning. | हम गुणवत्तापूर्ण शिक्षा प्रदान करते हैं।</p>
-</section>
-
-<section id="about" class="container">
-  <h2>About Us / हमारे बारे में</h2>
-  <p>AL-NOOR PUBLIC SCHOOL MANGLOUR is dedicated to academic excellence and character building.</p>
-</section>
-
-<section id="academics" class="container">
-  <h2>Academics</h2>
-  <div class="cards">
-    <div class="card"><h3>Primary</h3><p>Strong foundation learning.</p></div>
-    <div class="card"><h3>Middle</h3><p>Concept-based education.</p></div>
-    <div class="card"><h3>High School</h3><p>Board & competitive preparation.</p></div>
+<!-- HERO -->
+<section class="hero">
+  <div>
+    <h1>Welcome to Al‑Noor Public School Manglour</h1>
+    <p>Education is the most powerful weapon which you can use to change the world.</p>
+    <a href="#admission" class="btn">Apply for Admission</a>
   </div>
 </section>
 
-<section id="gallery" class="container">
-  <h2>Gallery</h2>
-  <div class="gallery">
-    <img src="https://via.placeholder.com/400x250" />
-    <img src="https://via.placeholder.com/400x250" />
-    <img src="https://via.placeholder.com/400x250" />
-    <img src="https://via.placeholder.com/400x250" />
+<!-- CONTENT -->
+<div class="container">
+
+  <div class="card" id="about">
+    <h2>About Our School</h2>
+    <p>
+      AL‑NOOR PUBLIC SCHOOL MANGLOUR is committed to quality education, discipline,
+      moral values and modern learning methods for overall student development.
+    </p>
   </div>
-</section>
 
-<section id="admission" class="container">
-  <h2>Admission Form</h2>
-  <form>
-    <input type="text" placeholder="Student Name" required />
-    <input type="text" placeholder="Class" required />
-    <input type="tel" placeholder="Parent Mobile" required />
-    <textarea placeholder="Address"></textarea>
-    <button type="submit">Submit</button>
-  </form>
-</section>
+  <div class="features">
+    <div class="feature-box">
+      <h3>📘 Quality Education</h3>
+      <p>Experienced teachers & modern teaching techniques.</p>
+    </div>
+    <div class="feature-box">
+      <h3>🏫 Safe Environment</h3>
+      <p>Secure, disciplined & student‑friendly campus.</p>
+    </div>
+    <div class="feature-box">
+      <h3>🎓 Holistic Growth</h3>
+      <p>Focus on academics, sports, discipline & values.</p>
+    </div>
+  </div>
 
-<section id="notice" class="container">
-  <h2>Notice Board</h2>
-  <ul>
-    <li>Admissions Open for 2025-26</li>
-    <li>School timing: 8:00 AM – 2:00 PM</li>
-    <li>Holiday notice will be updated here</li>
-  </ul>
-</section>
+  <div class="card" id="contact">
+    <h2>Contact Information</h2>
+    <p><strong>Address:</strong> Mohalla Bahar Qila, Malakpura Road, Manglour</p>
+    <p><strong>Phone:</strong> +91‑7017152544, +91‑8439221040</p>
+    <p><strong>Email:</strong> apschool@gmail.com</p>
+  </div>
 
-<section id="staff" class="container">
-  <h2>Our Staff</h2>
-  <p>Qualified and experienced teachers dedicated to student success.</p>
-</section>
-
-<section id="contact" class="container">
-  <h2>Contact Us</h2>
-  <p><strong>Address:</strong> Mohalla Bahar Qila, Malakpura Road, Manglour</p>
-  <p><strong>Phone:</strong> +91-7017152544, +91-8439221040</p>
-  <p><strong>Email:</strong> Apschool@gmail.com</p>
-</section>
+</div>
 
 <footer>
-  <p>© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
+  © 2025 AL‑NOOR PUBLIC SCHOOL MANGLOUR • All Rights Reserved
 </footer>
 
 </body>
