--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AL-NOOR PUBLIC SCHOOL MANGLOUR</title>
 
   <!-- Google Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
     :root{
@@ -16,184 +17,137 @@
       --green-dark:#066b2c;
       --light:#f7fff8;
     }
+    body{margin:0;font-family:'Poppins',sans-serif;background:var(--light);color:#222}
 
-    body{
-      margin:0;
-      font-family:'Poppins',sans-serif;
-      background:var(--light);
-      color:#222;
-    }
-
-    /* HEADER / NAVBAR */
-    header{
-      background:var(--green);
-      position:sticky;
-      top:0;
-      z-index:100;
-      box-shadow:0 3px 12px rgba(0,0,0,.15);
-    }
-    nav{
-      max-width:1200px;
-      margin:auto;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      padding:14px 20px;
-      color:#fff;
-    }
-    .logo{
-      font-size:24px;
-      font-weight:700;
-      letter-spacing:.5px;
-    }
-    nav a{
-      color:#fff;
-      text-decoration:none;
-      margin-left:18px;
-      font-weight:500;
-    }
-    nav a:hover{ text-decoration:underline; }
+    /* HEADER */
+    header{background:var(--green);position:sticky;top:0;z-index:100;box-shadow:0 3px 12px rgba(0,0,0,.15)}
+    nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
+    nav .logo{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px}
+    nav .logo img{height:45px}
+    nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500}
 
     /* HERO */
-    .hero{
-      height:80vh;
-      background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');
-      background-size:cover;
-      background-position:center;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      color:#fff;
-      padding:20px;
-      animation:fade 1.8s ease;
-    }
-    .hero h1{ font-size:46px; font-weight:700; }
-    .hero p{ font-size:19px; max-width:750px; margin:12px auto; }
-
-    .btn{
-      display:inline-block;
-      margin-top:12px;
-      padding:12px 30px;
-      background:var(--green);
-      color:#fff;
-      text-decoration:none;
-      border-radius:6px;
-      font-size:17px;
-    }
-    .btn:hover{ background:var(--green-dark); }
-
-    @keyframes fade{ from{opacity:0} to{opacity:1} }
+    .hero{height:85vh;background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px}
+    .hero h1{font-size:48px;font-weight:700}
+    .hero p{font-size:20px;max-width:800px;margin:auto}
+    .btn{display:inline-block;margin-top:15px;padding:14px 34px;background:var(--green);color:#fff;text-decoration:none;border-radius:6px;font-size:18px}
 
     /* SECTIONS */
-    .container{
-      max-width:1100px;
-      margin:auto;
-      padding:50px 20px;
-    }
-    .card{
-      background:#fff;
-      padding:28px;
-      border-radius:14px;
-      box-shadow:0 6px 20px rgba(0,0,0,.08);
-      margin-bottom:30px;
-    }
+    .container{max-width:1200px;margin:auto;padding:60px 20px}
+    h2{text-align:center;color:var(--green)}
 
     /* FEATURES */
-    .features{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:22px;
-      margin-top:35px;
-    }
-    .feature-box{
-      background:#eaffea;
-      padding:30px 20px;
-      border-radius:12px;
-      text-align:center;
-      border:1px solid #c8f5d4;
-      transition:.3s;
-    }
-    .feature-box:hover{ transform:translateY(-6px); }
+    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;margin-top:40px}
+    .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4}
+
+    /* GALLERY */
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;margin-top:30px}
+    .gallery img{width:100%;border-radius:10px}
+
+    /* FORM */
+    form{max-width:800px;margin:40px auto;background:#fff;padding:30px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.08)}
+    form input,form select,form textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
+    form button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
 
     /* FOOTER */
-    footer{
-      background:var(--green);
-      color:#fff;
-      text-align:center;
-      padding:22px 15px;
-      margin-top:40px;
-    }
+    footer{background:var(--green);color:#fff;padding:40px 20px;margin-top:60px}
+    .footer-grid{max-width:1200px;margin:auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:30px}
+    .social a{color:#fff;font-size:22px;margin-right:12px}
+    .whatsapp{display:inline-block;margin-top:10px;padding:10px 18px;background:#25D366;color:#fff;border-radius:6px;text-decoration:none}
 
-    @media(max-width:768px){
-      .hero h1{ font-size:34px; }
-      nav{ flex-direction:column; gap:8px; }
-    }
+    @media(max-width:768px){.hero h1{font-size:34px}}
   </style>
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
   <nav>
-    <div class="logo">AL‑NOOR PUBLIC SCHOOL</div>
+    <div class="logo">
+      <img src="https://via.placeholder.com/80x80?text=LOGO" alt="School Logo">
+      AL-NOOR PUBLIC SCHOOL
+    </div>
     <div>
-      <a href="#">Home</a>
-      <a href="#about">About</a>
+      <a href="#home">Home</a>
       <a href="#admission">Admission</a>
-      <a href="#staff">Staff</a>
       <a href="#gallery">Gallery</a>
       <a href="#contact">Contact</a>
     </div>
   </nav>
 </header>
 
-<!-- HERO -->
-<section class="hero">
+<section class="hero" id="home">
   <div>
-    <h1>Welcome to Al‑Noor Public School Manglour</h1>
-    <p>Education is the most powerful weapon which you can use to change the world.</p>
+    <h1>Welcome to Al-Noor Public School Manglour</h1>
+    <p>Nursery to Class 10th • Quality Education • Discipline & Values</p>
     <a href="#admission" class="btn">Apply for Admission</a>
   </div>
 </section>
 
-<!-- CONTENT -->
-<div class="container">
-
-  <div class="card" id="about">
-    <h2>About Our School</h2>
-    <p>
-      AL‑NOOR PUBLIC SCHOOL MANGLOUR is committed to quality education, discipline,
-      moral values and modern learning methods for overall student development.
-    </p>
-  </div>
-
+<section class="container">
+  <h2>Why Choose Us</h2>
   <div class="features">
-    <div class="feature-box">
-      <h3>📘 Quality Education</h3>
-      <p>Experienced teachers & modern teaching techniques.</p>
+    <div class="feature-box">📘 Quality Education</div>
+    <div class="feature-box">🏫 Safe Campus</div>
+    <div class="feature-box">🎓 Nursery to 10th</div>
+  </div>
+</section>
+
+<section class="container" id="gallery">
+  <h2>Gallery</h2>
+  <div class="gallery">
+    <img src="https://via.placeholder.com/400x250">
+    <img src="https://via.placeholder.com/400x250">
+    <img src="https://via.placeholder.com/400x250">
+    <img src="https://via.placeholder.com/400x250">
+  </div>
+</section>
+
+<section class="container" id="admission">
+  <h2>Admission Form</h2>
+  <!-- NOTE: Replace action with Google Form URL -->
+  <form action="#" method="post">
+    <input type="text" placeholder="First Name" required>
+    <input type="text" placeholder="Last Name" required>
+    <select required><option>Gender</option><option>Male</option><option>Female</option></select>
+    <input type="tel" placeholder="Phone Number" required>
+    <input type="text" placeholder="Father's Name">
+    <input type="text" placeholder="Mother's Name">
+    <select><option>Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
+    <input type="text" placeholder="Previous Class Passed">
+    <input type="text" placeholder="Aadhar Number">
+    <input type="file">
+    <textarea placeholder="Address"></textarea>
+    <button type="submit">Submit Application</button>
+  </form>
+</section>
+
+<footer id="contact">
+  <div class="footer-grid">
+    <div>
+      <h3>GET IN TOUCH</h3>
+      <p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
+      <p>📞 +91-7017152544<br>📞 +91-8439221040</p>
+      <p>✉ apschool@gmail.com</p>
+      <p>🌐 https://tinyurl.com/AlNoorPublicSchool</p>
     </div>
-    <div class="feature-box">
-      <h3>🏫 Safe Environment</h3>
-      <p>Secure, disciplined & student‑friendly campus.</p>
+    <div>
+      <h3>CONNECT WITH US</h3>
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+      <a class="whatsapp" href="https://wa.me/917017152544">WhatsApp Visit Website</a><br>
+      <a class="whatsapp" href="https://wa.me/918439221040">WhatsApp Visit Website</a>
     </div>
-    <div class="feature-box">
-      <h3>🎓 Holistic Growth</h3>
-      <p>Focus on academics, sports, discipline & values.</p>
+    <div>
+      <h3>QR Code</h3>
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://tinyurl.com/AlNoorPublicSchool" alt="QR Code">
     </div>
   </div>
-
-  <div class="card" id="contact">
-    <h2>Contact Information</h2>
-    <p><strong>Address:</strong> Mohalla Bahar Qila, Malakpura Road, Manglour</p>
-    <p><strong>Phone:</strong> +91‑7017152544, +91‑8439221040</p>
-    <p><strong>Email:</strong> apschool@gmail.com</p>
-  </div>
-
-</div>
-
-<footer>
-  © 2025 AL‑NOOR PUBLIC SCHOOL MANGLOUR • All Rights Reserved
+  <p style="text-align:center;margin-top:30px">© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
 </footer>
 
 </body>
