--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     nav{max-width:1200px;margin:auto;display:flex;justify-content:space-between;align-items:center;padding:14px 20px;color:#fff}
     nav .logo{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px}
     nav .logo img{height:45px}
-    nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500}
+    nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:500;cursor:pointer}
 
     /* HERO */
     .hero{height:85vh;background:linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.55)),url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1600&q=80');background-size:cover;background-position:center;display:flex;align-items:center;justify-content:center;text-align:center;color:#fff;padding:20px}
@@ -35,19 +35,20 @@
     /* SECTIONS */
     .container{max-width:1200px;margin:auto;padding:60px 20px}
     h2{text-align:center;color:var(--green)}
+    .section-text{text-align:center;max-width:900px;margin:20px auto;font-size:18px;color:#444}
 
     /* FEATURES */
     .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:25px;margin-top:40px}
-    .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4}
+    .feature-box{background:#eaffea;padding:30px;border-radius:12px;text-align:center;border:1px solid #c8f5d4;font-size:18px;font-weight:500;color:#066b2c}
 
     /* GALLERY */
     .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px;margin-top:30px}
     .gallery img{width:100%;border-radius:10px}
 
     /* FORM */
-    form{max-width:800px;margin:40px auto;background:#fff;padding:30px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.08)}
-    form input,form select,form textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
-    form button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
+    #admission-form{display:none;max-width:800px;margin:40px auto;background:#fff;padding:30px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.08)}
+    #admission-form input,#admission-form select,#admission-form textarea{width:100%;padding:12px;margin:8px 0;border:1px solid #ccc;border-radius:6px}
+    #admission-form button{width:100%;padding:14px;background:var(--green);color:#fff;border:none;border-radius:6px;font-size:18px;cursor:pointer}
 
     /* FOOTER */
     footer{background:var(--green);color:#fff;padding:40px 20px;margin-top:60px}
@@ -68,27 +69,32 @@
     </div>
     <div>
       <a href="#home">Home</a>
-      <a href="#admission">Admission</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
+      <a onclick="scrollToSection('about')">About Us</a>
+      <a onclick="scrollToSection('gallery')">Gallery</a>
+      <a onclick="scrollToSection('contact')">Contact</a>
     </div>
   </nav>
 </header>
 
 <section class="hero" id="home">
   <div>
-    <h1>Welcome to Al-Noor Public School Manglour</h1>
-    <p>Nursery to Class 10th • Quality Education • Discipline & Values</p>
-    <a href="#admission" class="btn">Apply for Admission</a>
+    <h1>Empowering Young Minds for a Brighter Future</h1>
+    <p>Where Quality Education Meets Care and Discipline</p>
+    <a onclick="openAdmissionForm()" class="btn">Apply for Admission</a>
   </div>
+</section>
+
+<section class="container" id="about">
+  <h2>About Us</h2>
+  <p class="section-text">At Al-Noor Public School, we nurture every child with love and provide holistic education from Nursery to Class 10. Our mission is to build confident, disciplined, and responsible citizens through innovative learning and strong values.</p>
 </section>
 
 <section class="container">
   <h2>Why Choose Us</h2>
   <div class="features">
-    <div class="feature-box">📘 Quality Education</div>
-    <div class="feature-box">🏫 Safe Campus</div>
-    <div class="feature-box">🎓 Nursery to 10th</div>
+    <div class="feature-box">📘 Excellence in Quality Education – Learning Beyond Books</div>
+    <div class="feature-box">🏫 Safe & Secure Campus – Your Child’s Safety is Our Priority</div>
+    <div class="feature-box">🎓 Nursery to Class 10 – Comprehensive Curriculum for Every Stage</div>
   </div>
 </section>
 
@@ -102,17 +108,16 @@
   </div>
 </section>
 
-<section class="container" id="admission">
+<section id="admission-form">
   <h2>Admission Form</h2>
-  <!-- NOTE: Replace action with Google Form URL -->
   <form action="#" method="post">
     <input type="text" placeholder="First Name" required>
     <input type="text" placeholder="Last Name" required>
-    <select required><option>Gender</option><option>Male</option><option>Female</option></select>
+    <select required><option value="">Gender</option><option>Male</option><option>Female</option></select>
     <input type="tel" placeholder="Phone Number" required>
     <input type="text" placeholder="Father's Name">
     <input type="text" placeholder="Mother's Name">
-    <select><option>Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
+    <select><option value="">Applying Class</option><option>Nursery</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option></select>
     <input type="text" placeholder="Previous Class Passed">
     <input type="text" placeholder="Aadhar Number">
     <input type="file">
@@ -128,7 +133,6 @@
       <p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
       <p>📞 +91-7017152544<br>📞 +91-8439221040</p>
       <p>✉ apschool@gmail.com</p>
-      <p>🌐 https://tinyurl.com/AlNoorPublicSchool</p>
     </div>
     <div>
       <h3>CONNECT WITH US</h3>
@@ -142,13 +146,20 @@
       <a class="whatsapp" href="https://wa.me/917017152544">WhatsApp Visit Website</a><br>
       <a class="whatsapp" href="https://wa.me/918439221040">WhatsApp Visit Website</a>
     </div>
-    <div>
-      <h3>QR Code</h3>
-      <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://tinyurl.com/AlNoorPublicSchool" alt="QR Code">
-    </div>
   </div>
   <p style="text-align:center;margin-top:30px">© 2025 AL-NOOR PUBLIC SCHOOL MANGLOUR</p>
 </footer>
+
+<script>
+  function openAdmissionForm() {
+    document.getElementById('admission-form').scrollIntoView({behavior:'smooth'});
+    document.getElementById('admission-form').style.display = 'block';
+  }
+
+  function scrollToSection(id) {
+    document.getElementById(id).scrollIntoView({behavior:'smooth'});
+  }
+</script>
 
 </body>
 </html>
