--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
 <section class="hero" id="home">
   <div>
-    <h1>Empowering Young Minds for a Brighter Future</h1>
-    <p>Where Quality Education Meets Care and Discipline</p>
+    <h1>Welcome to Al-Noor Public School Manglour</h1>
+    <p>Empowering Young Minds for a Brighter Future. Where Quality Education Meets Care and Discipline</p>
     <a onclick="openAdmissionForm()" class="btn">Apply for Admission</a>
   </div>
 </section>
@@ -278,3 +278,4 @@
 
 </body>
 </html>
+
