--- a/index.html
+++ b/index.html
@@ -142,19 +142,55 @@ learning environment from Nursery to Class 10, nurturing students for a bright f
 
 <section class="container" id="teachers">
 <h2>Meet Our Teachers</h2>
+
 <div class="slider">
-<div class="track">
-<div class="slide">
-<div class="card"><img src="https://randomuser.me/api/portraits/women/65.jpg"><h4>Nuzhat Saifi</h4><p>Principal<br>10 Years</p></div>
-<div class="card"><img src="https://randomuser.me/api/portraits/men/32.jpg"><h4>Mohd Shahzad</h4><p>Manager<br>10 Years</p></div>
-<div class="card"><img src="https://randomuser.me/api/portraits/men/45.jpg"><h4>Mohd Sajid</h4><p>Manager<br>10 Years</p></div>
-</div>
-<div class="slide">
-<div class="card"><img src="https://randomuser.me/api/portraits/women/44.jpg"><h4>Misba</h4><p>6 Years</p></div>
-<div class="card"><img src="https://randomuser.me/api/portraits/men/78.jpg"><h4>Arshad</h4><p>15 Years</p></div>
-<div class="card"><img src="https://randomuser.me/api/portraits/women/52.jpg"><h4>Shayma</h4><p>5 Years</p></div>
-</div>
-</div>
+  <div class="track">
+    <div class="slide">
+
+      <div class="card">
+        <img src="https://instasize.com/p/106b33125bea7ac94542f77ad68ea2504811cb3b55cc17e2dc3974a270cf305a">
+        <h4>Nuzhat Saifi</h4>
+        <p><strong>Principal</strong><br>Experience - 10 Years</p>
+      </div>
+
+      <div class="card">
+        <img src="https://instasize.com/p/8d62545d86a2f2721de7517d4dc9079e57eabe9997f76538ba54cb6b84f1c554">
+        <h4>Mohd Shahzad</h4>
+        <p><strong>Manager</strong><br>Experience - 10 Years</p>
+      </div>
+
+      <div class="card">
+        <img src="https://instasize.com/p/47d0048d5e93823ca47656237a3a8fda6b2d8fa7575dd6808755ef5cd1c99d56">
+        <h4>Mohd Sajid</h4>
+        <p><strong>Manager</strong><br>Experience - 10 Years</p>
+      </div>
+
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/44.jpg">
+        <h4>Misba</h4>
+        <p>Experience - 6 Years</p>
+      </div>
+
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/men/78.jpg">
+        <h4>Arshad Ali</h4>
+        <p>Experience - 15 Years</p>
+      </div>
+
+      <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/52.jpg">
+        <h4>Shayma</h4>
+        <p>Experience - 5 Years</p>
+      </div>
+        
+        <div class="card">
+        <img src="https://randomuser.me/api/portraits/women/52.jpg">
+        <h4>Alisha Naaz</h4>
+        <p>Experience - 5 Years</p>
+      </div>
+
+    </div>
+  </div>
 </div>
 </section>
 
@@ -236,3 +272,4 @@ function go(id){document.getElementById(id).scrollIntoView({behavior:"smooth"})}
 
 </body>
 </html>
+
