--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ footer{background:var(--green);color:#fff;padding:40px 20px}
 <section class="hero" id="home">
 <div>
 <img src="logo.png">
-<h1>Welcome to Al-Noor International School</h1>
-<p>Knowledge • Faith • Success</p>
+<h1>Welcome to Al-Noor Public School Manglour</h1>
+<p>Empowering Young Minds for a Brighter Future. Where Quality Education Meets Care and Discipline Shaping Young Minds with Quality Education, Discipline & Moral Values</p>
 <a class="btn" onclick="openForm()">Apply for Admission</a>
 </div>
 </section>
@@ -170,16 +170,16 @@ footer{background:var(--green);color:#fff;padding:40px 20px}
 <section class="container" id="about">
 <h2>About Us</h2>
 <p style="text-align:center;max-width:900px;margin:auto">
-Providing quality education from Nursery to Class 10 with discipline, moral values and academic excellence.
+Providing quality education from Nursery to Class 10th with discipline, moral values and academic excellence.
 </p>
 </section>
 
 <section class="container">
 <h2>Why Choose Us</h2>
 <div class="features">
-<div class="feature">📘 Strong Academics</div>
-<div class="feature">🏫 Safe & Disciplined Campus</div>
-<div class="feature">🎓 Nursery to Class 10</div>
+<div class="feature">📘 Excellence in Academics & Moral Education</div>
+<div class="feature">🏫 Safe & Disciplined Campus Safe, Secure & Child-Friendly Campus</div>
+<div class="feature">🎓 Complete Schooling from Nursery to Class 10th</div>
 </div>
 </section>
 
@@ -188,23 +188,41 @@ Providing quality education from Nursery to Class 10 with discipline, moral valu
 <div class="teacher-grid">
 
 <div class="card">
-<img src="IMG-20231224-WA0013.jpg">
+<img src="nuzhat.jpg">
 <h4>Nuzhat Saifi</h4>
 <p><strong>Principal</strong><br>10 Years Experience</p>
 </div>
 
 <div class="card">
-<img src="150-200.jpg">
+<img src="sajid.jpg">
 <h4>Mohd Sajid</h4>
 <p><strong>Manager</strong><br>10 Years Experience</p>
 </div>
 
 <div class="card">
-<img src="IMG_9371 (1).jpg">
+<img src="shahzad.jpg">
 <h4>Mohd Shahzad</h4>
 <p><strong>Manager</strong><br>10 Years Experience</p>
 </div>
 
+<div class="card">
+<img src="shahzad.jpg">
+<h4>Misba Naaz</h4>
+<p><strong>Teacher</strong><br>6 Years Experience</p>
+</div>
+
+<div class="card">
+<img src="shahzad.jpg">
+<h4>Shayma Parveen</h4>
+<p><strong>Teacher</strong><br>5 Years Experience</p>
+</div>
+
+<div class="card">
+<img src="shahzad.jpg">
+<h4>Alisha Naaz</h4>
+<p><strong>Teacher</strong><br>3 Years Experience</p>
+</div>
+  
 </div>
 </section>
 
@@ -224,7 +242,7 @@ Providing quality education from Nursery to Class 10 with discipline, moral valu
 <h3>GET IN TOUCH</h3>
 <p>Mohalla Bahar Qila, Malakpura Road, Manglour</p>
 <p>📞 +91-7017152544<br>📞 +91-8439221040</p>
-<p>✉ alnoorpublicschool@gmail.com</p>
+<p>✉ Apschool@gmail.com</p>
 </div>
 
 <div>
@@ -242,7 +260,7 @@ Providing quality education from Nursery to Class 10 with discipline, moral valu
 </div>
 
 <p style="text-align:center;margin-top:30px">
-© 2025 AL-NOOR INTERNATIONAL SCHOOL MANGLOUR
+© 2025-26 AL-NOOR INTERNATIONAL SCHOOL MANGLOUR
 </p>
 </footer>
 
@@ -259,7 +277,7 @@ Providing quality education from Nursery to Class 10 with discipline, moral valu
 <input placeholder="Mother's Name">
 <select>
 <option>Applying Class</option>
-<option>Nursery</option><option>1</option><option>2</option>
+<option>Nursery</option><option>L.K.G</option><option>U.K.G</option><option>1</option><option>2</option>
 <option>3</option><option>4</option><option>5</option>
 <option>6</option><option>7</option><option>8</option>
 <option>9</option><option>10</option>
@@ -287,3 +305,4 @@ window.onload=function(){
 
 </body>
 </html>
+
