--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@ footer{background:var(--green);color:#fff;padding:40px 20px}
 <header>
 <nav>
 <div class="logo">
-  <img src="logo.png">
-  <div class="logo-text">
-    <span class="school-name">AL-NOOR INTERNATIONAL SCHOOL</span>
-  </div>
+  <img src="logo.png" alt="Al-Noor Public School Logo">
+  <span>AL-NOOR PUBLIC SCHOOL</span>
+</div>
 </div>
 
 <div>
@@ -304,6 +303,7 @@ window.onload=function(){
 
 </body>
 </html>
+
 
 
 
