--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <img src="https://ui-avatars.com/api/?name=Nuzhat+Saifi&background=1f5f43&color=fff" class="teacher-img">
                     <h5 class="fw-bold">Nuzhat Saifi</h5>
                     <p class="badge bg-success">Principal</p>
-                    <p class="text-muted small">10 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 10 Year Experience</p>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -140,15 +140,15 @@
                     <img src="https://ui-avatars.com/api/?name=Mohd+Sajid&background=caa64c&color=fff" class="teacher-img">
                     <h5 class="fw-bold">Mohd Sajid</h5>
                     <p class="badge bg-dark">Manager</p>
-                    <p class="text-muted small">10 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 10 Year Experience</p>
                 </div>
             </div>
             <div class="swiper-slide">
                 <div class="teacher-card">
-                    <img src="https://ui-avatars.com/api/?name=Mohd+Shahzad&background=caa64c&color=fff" class="teacher-img">
+                    <img src="https://i.ibb.co/sdD3Tf9v/AL-NOOR-LOGO.jpg" class="teacher-img">
                     <h5 class="fw-bold">Mohd Shahzad</h5>
                     <p class="badge bg-dark">Manager</p>
-                    <p class="text-muted small">15 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 15 Year Experience</p>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -156,7 +156,7 @@
                     <img src="https://ui-avatars.com/api/?name=Misba&background=eee&color=333" class="teacher-img">
                     <h5 class="fw-bold">Misba</h5>
                     <p class="badge bg-light text-dark">Teacher</p>
-                    <p class="text-muted small">5 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 5 Year Experience</p>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -164,7 +164,7 @@
                     <img src="https://ui-avatars.com/api/?name=Misba&background=eee&color=333" class="teacher-img">
                     <h5 class="fw-bold">Shayma</h5>
                     <p class="badge bg-light text-dark">Teacher</p>
-                    <p class="text-muted small">5 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 5 Year Experience</p>
                 </div>
             </div>
             <div class="swiper-slide">
@@ -172,7 +172,7 @@
                     <img src="https://ui-avatars.com/api/?name=Misba&background=eee&color=333" class="teacher-img">
                     <h5 class="fw-bold">Alisha Naaz</h5>
                     <p class="badge bg-light text-dark">Teacher</p>
-                    <p class="text-muted small">5 Year Experience</p>
+                    <p class="text-muted small mb-0"><i class="fas fa-award text-warning"></i> 5 Year Experience</p>
                 </div>
             </div>
         </div>
@@ -276,3 +276,4 @@
 
 </body>
 </html>
+
